--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Твоя Аптека</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/fonts/fonts.css">
 </head>
@@ -184,7 +184,7 @@
                     <tbody>
                     <tr>
                         <td>К1</td>
-                        <td><a href="#">Отпуск товара</a></td>
+                        <td><a href="k1.html">Отпуск товара</a></td>
                         <td>
                             <ul>
                                 <li>Прозводительность труда</li>
@@ -226,7 +226,7 @@
                     </tr>
                     <tr>
                         <td>К2</td>
-                        <td><a href="#">Консультирование</a></td>
+                        <td><a href="k2.html">Консультирование</a></td>
                         <td>
                             <ul>
                                 <li>Конверсия</li>
@@ -265,7 +265,7 @@
                     </tr>
                     <tr>
                         <td>К3</td>
-                        <td><a href="#">Продажа товаров из <br> приоритетной группы</a></td>
+                        <td><a href="k3.html">Продажа товаров из <br> приоритетной группы</a></td>
                         <td>
                             <ul>
                                 <li>Пенитрация приоритетных товаров</li>
@@ -303,7 +303,7 @@
                     </tr>
                     <tr>
                         <td>К4</td>
-                        <td><a href="#">Сверка остатков</a></td>
+                        <td><a href="k4.html">Сверка остатков</a></td>
                         <td>
                             <ul>
                                 <li>Сроки и полнота сверки остатков</li>
@@ -335,7 +335,7 @@
                     </tr>
                     <tr>
                         <td>К5</td>
-                        <td><a href="#">Оценка руководителей</a></td>
+                        <td><a href="k5.html">Оценка руководителей</a></td>
                         <td>
                             <ul>
                                 <li>Исполнительская дисциплина</li>
