--- a/k4.html
+++ b/k4.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
     <div class="header">
         <div class="header-container">
-            <img class="header-logo" src="assets/images/logo.svg" alt="logo">
+            <a href="#"><img class="header-logo" src="assets/images/logo.svg" alt="logo"></a>
             <div class="burger-menu">
                 <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
                 <label for="burger-checkbox" class="burger"></label>
@@ -105,7 +105,7 @@
         </div>
         <div class="page-content">
             <div class="breadcrumbs">
-                <a class="active" href="#">Главная</a> / <a href="index.html">Мои результаты</a> / <a href="k4.html">К4: Сверка остатков</a>
+                <a href="#">Главная</a> / <a href="index.html">Мои результаты</a> / <a class="active" href="k4.html">К4: Сверка остатков</a>
             </div>
             <h1>
                 <a class="back-arrow" href="index.html">
