--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
     <div class="header">
         <div class="header-container">
-            <img class="header-logo" src="assets/images/logo.svg" alt="logo">
+            <a href="#"><img class="header-logo" src="assets/images/logo.svg" alt="logo"></a>
             <div class="burger-menu">
                 <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
                 <label for="burger-checkbox" class="burger"></label>
@@ -105,7 +105,7 @@
         </div>
         <div class="page-content">
             <div class="breadcrumbs">
-                <a class="active" href="#">Главная</a> / <a href="#">Мои результаты</a>
+                <a href="#">Главная</a> / <a href="#" class="active">Мои результаты</a>
             </div>
             <h1>Мои результаты</h1>
             <div class="filter-period">
@@ -367,10 +367,10 @@
                     </tr>
                     </tbody>
                 </table>
-                <div class="accordion">
+                <div class="accordion accordion-main">
                     <div class="accordion-item">
                         <h4>
-                            <span class="title">К1 <a href="#">Отпуск товара</a></span>
+                            <span class="title">К1 <a href="k1.html">Отпуск товара</a></span>
                             <span class="value" style="color: var(--color-red)">0,8
 
                                 <svg class="arrow-down" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -424,7 +424,7 @@
                     </div>
                     <div class="accordion-item">
                         <h4>
-                            <span class="title">К2 <a href="#">Консультирование</a></span>
+                            <span class="title">К2 <a href="k2.html">Консультирование</a></span>
                             <span class="value" style="color: #00AB07">
                                 1,2
                                                            <svg class="arrow-down" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -478,7 +478,7 @@
                     </div>
                     <div class="accordion-item">
                         <h4>
-                            <span class="title">К3 <a href="#">Продажа товаров из приоритетной группы</a></span>
+                            <span class="title">К3 <a href="k3.html">Продажа товаров из приоритетной группы</a></span>
                             <span class="value" style="color: #00AB07">
                                 1,2
                                                            <svg class="arrow-down" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -532,7 +532,7 @@
                     </div>
                     <div class="accordion-item">
                         <h4>
-                            <span class="title">К4 <a href="#">Сверка остатков</a></span>
+                            <span class="title">К4 <a href="k4.html">Сверка остатков</a></span>
                             <span class="value" style="color: #0047D6">
                                 0,9
                                                            <svg class="arrow-down" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -574,7 +574,7 @@
                     </div>
                     <div class="accordion-item">
                         <h4>
-                            <span class="title">К5 <a href="#">Оценка руководителей</a></span>
+                            <span class="title">К5 <a href="k5.html">Оценка руководителей</a></span>
                             <span class="value" style="color: var(--color-red)">
                                 0,8
                                                            <svg class="arrow-down" width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
